[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-store"
version = "1.0.0"
description = "Lightweight persistent memory for AI agents. SQLite backend, privacy controls, audit log, TTL. Zero mandatory dependencies beyond Python stdlib."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Linda Oraegbunam" }]
keywords = [
    "agent-memory", "llm-agents", "persistent-memory",
    "ai-agents", "memory-store", "privacy", "audit-log",
    "sqlite", "langchain", "langgraph", "pydantic-ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = []   # zero mandatory dependencies — stdlib only

[project.optional-dependencies]
anthropic = ["anthropic>=0.25.0"]
summarise = ["anthropic>=0.25.0"]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "black>=24.0.0", "ruff>=0.4.0"]

[project.scripts]
agent-memory = "agent_memory.cli:main"

[project.urls]
Homepage = "https://github.com/obielin/agent-memory-store"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
